# fast_crypto

./: .gitignore  CHANGELOG.md  LICENSE  README.md  READY_TO_PUBLISH.md  flutter_rust_bridge.yaml  pubspec.yaml
.cargo/: config.toml
.dart_tool/: package_config.json  package_graph.json
android/: build.gradle  settings.gradle
android/src/main/kotlin/com/shariar99/fast_crypto/: FastCryptoPlugin.kt
android/src/test/kotlin/com/example/fast_crypto/: FastCryptoPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/fast_crypto_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
lib/: fast_crypto.dart
lib/src/: fast_crypto_method_channel.dart  fast_crypto_platform_interface.dart
lib/src/rust/: crypto.dart  error.dart  error.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
rust/: Cargo.toml
rust/src/: crypto.rs  error.rs  frb_generated.rs  lib.rs
rust/tests/: integration_tests.rs
test/: fast_crypto_method_channel_test.dart  fast_crypto_test.dart
